--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = cloudflarepycli
-version = 0.50.7
-author = Tom Evslin
+version = 1.8
+author = "Tom Evslin"
 author_email = tevslin@gmail.com
-description = Python CLI and python class for retrieving user's realtime performance statistics
+description = "Python CLI and python class for retrieving user's realtime performance statistics"
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/tevslin/cloudflarepycli
