--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,8 @@ Issues = "https://github.com/cloudflarepycli/issues"
 cfspeedtest = "cfspeedtest.__main__:cfspeedtest"
 
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = [
+  "setuptools>=61.0",
+  "twine>=5.1.0",
+]
 build-backend = "setuptools.build_meta"
